이미지 패스 변경

--- a/practice/imageslide/image-slice.html
+++ b/practice/imageslide/image-slice.html
@@ -35,7 +35,7 @@
   </style>
   <body>
     <div class="wrap">
-      <img src="./road.jpg" />
+      <img src="../../images/road.jpg" />
       <div class="layer-wrap">
         <div class="layer"></div>
         <div class="layer"></div>
